2006-02-10  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm.1.in:
	spell check the whole file (dozens of typos)

2006-02-10  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/module_interface.c (do_execute_module):
	removed accidentally committed FVWM_MODULE_ALIAS patch

2006-02-09  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/module_interface.c (do_execute_module):
	unset envvars FVWM_VISUALID and FVWM_COLORMAP if they are not needed

	* fvwm/menus.c (size_menu_horizontally):
	fix for drawing menus with sidepic on the right

	* libs/Flocale.c (FlocaleFontStructDrawString):
	(FlocaleDrawString):
	set the foreground colour before drawing a string

	* fvwm/menustyle.h:
	* fvwm/menustyle.c (menustyle_get_styleopt_index):
	(menustyle_free):
	(menustyle_update):
	(menustyle_parse_style):
	(menustyle_copy):
	* fvwm/menus.c (calculate_item_sizes):
	(size_menu_vertically):
	(UpdateMenuColorset):
	* fvwm/menuitem.c (menuitem_paint):
	Applied patch by David Maciver
	new menu styles TitleColorset, HilightTitleBack and TitleFont

2006-02-09  Renato Caldas  <seventhguardian@gmail.com>

	* libs/Module.h:
	* libs/Module.c (ParseModuleArgs):
	added variable "namelen" to ModuleArgs struct

2006-02-02  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/Module.h:
	removed duplicate declaration

2006-01-29  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/fvwm.c (main):
	replaced previous patch with a better one

	* fvwm/virtual.c (unmap_window):
	* fvwm/menus.c (do_menu):
	* fvwm/events.c (fake_map_unmap_notify):
	(HandleMapNotify):
	* fvwm/add_window.c (MappedNotOverride):
	Added XFlush after XSelectInput

2006-01-28  Viktor Griph  <griph@dd.chalmers.se>

	* NEWS:
	* fvwm/fvwm.c (main):
	fix for fvwm not detecting non ICCCM2 wm (bug #3151)

2006-01-20  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* NEWS:
	* configure.ac:
	increased version to 2.5.17
	released 2.5.16

	* NEWS:
	* configure.ac:
	updated for 2.5.16 release
